--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/penkar/361service#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
